# auth-project

./: .gitignore  .pre-commit-config.yaml  app.yaml  db.sqlite3  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: authy-backend-workflow.yml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_is_active_user_is_staff.py
authProject/: asgi.py  settings.py  wsgi.py
common/: managers.py
config/: settings.py
scripts/: postgres-setup.sh
tests/: .coverage  test.py
